--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "less-loader": "^2.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
-    "stylus-loader": "^1.2.1",
+    "stylus": "^0.54.2",
+    "stylus-loader": "^2.0.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
