--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "babel-core": "^5.8.14",
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
-    "bootstrap-webpack": "0.0.3",
+    "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "i": "^0.3.3",
